# GPT-autoresearch

./: .gitignore  AGENTS.md  AMD_ROCM_CHANGES.md  CLAUDE.md  PLAN.md  PLAN_FRAMEWORK.md  PR.md  README.md  SKILL.md  TRANSITION_PLAN.md  analysis.ipynb  collab.md  commons.py  coordinator.py  director.md  director.py  dojo_results.tsv  generate.py  harness_ane.py  loop_results.tsv  optimize.py  plan.md  platform_utils.py  plot_progress.py  prepare.py  program.md  program_dojo.md  program_loop.md  pyproject.toml  results.tsv  run_optimization.py  setup_hub.py  sft_prepare.py  sft_train.py  soul_architect.md  soul_oracle.md  spiritualguidance.md  spirtualguidance.md  test_commons.py  test_director.py  (+4 more)
.claude/skills/: README.md  analyze-optimization.md  optimize-bayesian.md  optimize-cmaes.md  optimize-hybrid.md  optimize-nsga.md  optimize-qmc.md
.claude/skills/examples/: ml_tuning.py
ane/: experiment_config.h  train_ane.m
backends/: __init__.py  muon_mlx.py
benchmarks/mps_vs_mlx/: README.md
component_system/: PDCA-DO-CHECK-ACTION.md  PDCA-PLAN.md  config.py  entrypoint.py  package.json  protocol.md  run.py  task.py
component_system/components/: model.py  optimizer.py  trainer.py
component_system/domain/: models.py
component_system/repositories/: state.py
component_system/services/: workflow.py
component_system/training/: mainline.py
component_system/web/: app.py  routes.py
component_system/web/static/: app.css  app.js
component_system/web/templates/: base.html  dashboard.html  seed_detail_page.html
examples/: README.md  activate.sh  plot_progress.py  run_test.py
knowledge/: index.json
multi-ralph/: README.md  fix-v100-dtype.sh  launch.sh  program-multi.md  results.tsv  strategy.md
multi-ralph/best/: train.py
pdca_system/: README.md  daemon.py  task.py
pdca_system/services/: workflow.py
pdca_system/tests/: test_daemon.py  test_web.py
pdca_system/web/: routes.py
pdca_system/web/templates/: base.html
phase1/: README.md  plot_comparison.py
phase1/agent/: results.tsv  summary.txt
phase2/analysis/: plot_phase2_results.py
scripts/: clean_history.py
src/autoanything/: cli.py
test_problems/: README.md
testing/: run_tinker_reasoning_smoke.py  validate_rollout_prompt.py
tests/: test_cli.py  test_commons.py  test_director.py  test_evaluator.py  test_git.py  test_integration.py  test_runner.py
ttt_autoresearch/: runner.py
workflows/: run_experiment.py
(+7 files in other folders)
