[project]
name = "autoresearch-amd"
version = "0.1.0"
description = "Autonomous pretraining research swarm (AMD ROCm fork)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch==2.9.1",
    "flash-attn-rocm>=0.2.0; platform_system=='Linux'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-rocm" },
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2.4"
explicit = true
